RESOLVED FIXED81826
REGRESSION(107971): Google Voice contact list is broken in WebKit due to badly allocating the extra height
https://bugs.webkit.org/show_bug.cgi?id=81826
Summary REGRESSION(107971): Google Voice contact list is broken in WebKit due to badl...
Julien Chaffraix
Reported 2012-03-21 12:29:26 PDT
r107971 made an unneeded change to the way we allocate extra logical height in WebKit. I thought this change was neutral (from the ChangeLog): This is neither a progression nor a regression. We are not doing the right thing as we don't distribute the extra logical height evenly over our sections. Now we give the extra height to the <thead> (first section) instead of the <tbody>. But it looks like some web content was relying on our broken behavior. The real fix would be to fix our super broken extra logical height distribution algorithm which is tracked by bug 81824. Downstream: http://code.google.com/p/chromium/issues/detail?id=114939
Attachments
Revert the unneeded change to our extra logical height distribution algorithm. (7.60 KB, patch)
2012-03-22 21:04 PDT, Julien Chaffraix
no flags
Updated the chromium entries that was wrong and tweaked more platforms' Skipped files. (10.79 KB, patch)
2012-03-23 08:33 PDT, Julien Chaffraix
no flags
Julien Chaffraix
Comment 1 2012-03-21 13:17:57 PDT
Looking again, if we roll out part of r107971, it's likely LayoutTests/fast/table/double-height-table-no-tbody.html would need to be rewritten as it assumed a non-broken distribution. The Google voice issue was solved with a redesign which makes it less important and I haven't heard of any other report about that for now.
Julien Chaffraix
Comment 2 2012-03-22 21:04:37 PDT
Created attachment 133424 [details] Revert the unneeded change to our extra logical height distribution algorithm.
WebKit Review Bot
Comment 3 2012-03-22 21:52:21 PDT
Comment on attachment 133424 [details] Revert the unneeded change to our extra logical height distribution algorithm. Attachment 133424 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/12117474 New failing tests: tables/mozilla/bugs/bug27038-2.html tables/mozilla/bugs/bug27038-1.html
Julien Chaffraix
Comment 4 2012-03-23 08:33:47 PDT
Created attachment 133491 [details] Updated the chromium entries that was wrong and tweaked more platforms' Skipped files.
Julien Chaffraix
Comment 5 2012-03-23 11:18:17 PDT
Comment on attachment 133491 [details] Updated the chromium entries that was wrong and tweaked more platforms' Skipped files. Thanks Tony!
WebKit Review Bot
Comment 6 2012-03-23 11:27:48 PDT
Comment on attachment 133491 [details] Updated the chromium entries that was wrong and tweaked more platforms' Skipped files. Clearing flags on attachment: 133491 Committed r111882: <http://trac.webkit.org/changeset/111882>
WebKit Review Bot
Comment 7 2012-03-23 11:27:53 PDT
All reviewed patches have been landed. Closing bug.
mitz
Comment 8 2012-03-23 13:04:31 PDT
*** Bug 81620 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.